# BiblioNotion2.0

./: .gitignore  README.md  data.db  main.py  pdf_manager.py  pyproject.toml  style.json  test.db
custom_dialogs/: confirm_auto_save_file_dialog.py  confirm_custom_dialog.py  confirm_delete_dialog.py  confirm_register_dialog.py  confirm_update_dialog.py  custom_message_dialog.py  export_dialog.py  no_connection_dialog.py  quit_dialog.py
custom_widgets/: book_custom_widget.py  note_custom_widget.py
generate_uis/: api_book_view_ui.py  book_view_ui.py  confirm_auto_save_file_dialog_ui.py  confirm_delete_dialog_ui.py  confirm_register_book_dialog_ui.py  confirm_reset_settings_dialog_ui.py  confirm_update_dialog_ui.py  convert_note_dialog_ui.py  convert_note_view_ui.py  custom_message_dialog_ui.py  export_view_ui.py  library_notes_view_ui.py  library_view_ui.py  main_view_ui.py  no_connection_dialog_ui.py  note_view_ui.py  quit_dialog_ui.py  register_book_view_ui.py  register_note_view_ui.py  select_book_for_note_ui.py  select_book_to_register_note_ui.py  setting_view_ui.py  splash_view_ui.py  update_book_view_ui.py  update_note_view_ui.py
models/: book.py  note.py  setting.py
qt_xml_ui/: api_book_view_ui.ui  book_view_ui.ui  confirm_auto_save_file_dialog_ui.ui  confirm_auto_save_file_ui.ui  confirm_delete_dialog.ui  confirm_register_book_dialog.ui  confirm_reset_settings_dialog_ui.ui  confirm_update_book_dialog.ui  confirm_update_dialog.ui  convert_note_dialog_ui.ui  convert_note_view_ui.ui  custom_message_dialog_ui.ui  export_view_ui.ui  library_notes_view_ui.ui  (+15 more)
(+28 files in other folders)
